# spotify-to-ytmusic

./: .env.example  .gitignore  DEVELOPMENT.md  QUICKSTART.md  README.md  TODO.md  USAGE_EXAMPLE.md  pyproject.toml
.github/workflows/: ci.yml
src/spotify_to_ytmusic/: cli.py  exceptions.py  logging_config.py
src/spotify_to_ytmusic/models/: track.py
src/spotify_to_ytmusic/services/: spotify_service.py  ytmusic_service.py
src/spotify_to_ytmusic/utils/: __init__.py  retry.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_exceptions.py  test_logging_config.py  test_models.py  test_retry.py  test_spotify_service.py  test_ytmusic_service.py
