[project]
name = "spotify-to-ytmusic"
version = "0.1.0"
description = "A CLI tool to migrate playlists and albums from Spotify to YouTube Music"
authors = [
    {name = "Seyi Thorpe"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spotipy (>=2.25.1,<3.0.0)",
    "ytmusicapi (>=1.11.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "pytest-mock (>=3.12.0,<4.0.0)",
]

[project.scripts]
spotify-to-ytmusic = "spotify_to_ytmusic.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/spotify_to_ytmusic",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=50"
]

[tool.coverage.run]
source = ["src/spotify_to_ytmusic"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
